added react and sample app component

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "Home") %>
 <p>Find me in app/views/home/index.html.erb</p>
 <p>Stimulus says, <i data-controller=hello></i></p>
+
+<div id="home"></div>
