--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <%# to include things like header, footer, and alerts that are common  %>
 <%# to most (but not all) views.                                       %>
 
-<main class="container">
+<main class="container __class_9c9965">
   <%= render("shared/flash") %>
   <%= yield %>
 </main>
